metadata/root/main/default/objects/Regression12_12__c/Regression12_12__c.object-meta.xml
<CustomObject>
    <label>Regression12_12</label>
    <nameField>
        <label>Regression12_12 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regression12_12</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>