metadata/root/main/default/objects/Regression12_12__c/fields/Picklist_Multi__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Multi__c</fullName>
    <description>jgfchfg</description>
    <label>Picklist Multi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>