metadata/root/main/default/objects/Regression12_12__c/fields/Textareac__c.field-meta.xml
<CustomField>
    <fullName>Textareac__c</fullName>
    <description>uhgjhvghj</description>
    <label>Textareac</label>
    <type>TextArea</type>
</CustomField>