metadata/root/main/default/objects/Regression12_12__c/recordTypes/Type2.recordType-meta.xml
<RecordType>
    <fullName>Type2</fullName>
    <active>true</active>
    <label>Type2</label>
</RecordType>