metadata/root/main/default/objects/Regression12_12__c/validationRules/ValRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ValRule</fullName>
    <active>true</active>
    <errorConditionFormula>Name != &apos;0&apos;</errorConditionFormula>
    <errorMessage>error!</errorMessage>
</ValidationRule>